# leanix-self-built-software-agent

./: .env.example  .gitignore  CODEOWNERS  Dockerfile  README-sync_pathfinder.md  README.md  REUSE.toml  docker-compose.yaml  main.py  pyproject.toml  sync_pathfinder.py
.planning/: ROADMAP.md  STATE.md
.planning/phases/02-context-discovery/: 02-01-PLAN.md  02-02-PLAN.md
.planning/phases/03-agent-integration/: 03-01-PLAN.md  03-01-SUMMARY.md
.planning/phases/04-cli-integration/: 04-01-PLAN.md  04-02-PLAN.md
.planning/phases/05-testing-documentation/: 05-01-PLAN.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md
docs/: CONTEXT_FILES.md
docs/examples/: org-context-example.md  repo-context-example.md
src/ai_provider/: ai_provider.py
src/cli/: __init__.py  context.py  discover.py  main.py  sync.py
src/cli/utils/: formatters.py  github_utils.py  validators.py
src/config/: config.py
src/converter/: converters.py
src/db/: conn.py  models.py
src/dto/: context_dto.py  state_dto.py
src/evals/: output_scoring_eval.py
src/logging/: logging.py
src/nodes/agents/: ai_service_discovery_agent.py  (+8 more)
src/services/: ai_discovery_data.py  context_loader.py  fact_sheets.py  organizations.py  repositories.py
src/tools/: classify_repo_type_tool.py  discover_services_tool.py
src/utils/: context_injection.py  file_filters.py  url_helper.py
src/workflows/: repo_type_workflow.py  repo_type_workflow_visualizer.py
tests/: conftest.py  test_context_dto.py  test_context_injection.py  test_load_context_runnable.py
tests/services/: test_context_loader.py
(+12 files in other folders)
